--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,32 @@
 
     <main>
         <section>
-            <img src="" alt="">
+            <img src="img/Destaque Principal.png" alt="Imagem principal" width="520px" height="192px">
         </section>
         
         <section>
-            <article></article>
-            <article></article>
+            <article>
+                <img src="img/Imagem artigo 1.jpg" alt="Imagem do primeiro artigo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nisi nobis, 
+                    praesentium id illum vitae fuga esse ratione modi sequi laborum cum eveniet veniam ab numquam ea 
+                    doloribus excepturi eum?
+                </p>
+            </article>
+            <article>
+                <img src="img/Imagem artigo 2.jpg" alt="Imagem do segundo artigo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, velit. Labore pariatur vero, 
+                impedit rem iste veritatis odio aspernatur omnis laborum aperiam neque veniam accusamus, nemo, 
+                fuga fugiat corporis deleniti!
+                </p>
+            </article>
         </section>
 
         <aside>
             <img src="img/menu.png" alt="icone do menu" width="23px" height="23px"> 
             <p>Menu</p>
+            <ul>
+                <li><a href="#">Colaboradores</a></li>
+            </ul>
         </aside>
 
         <footer>
