Style header e main

--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,19 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Sobre nós</a></li>
                 <li><a href="#">Contato</a></li>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Início</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section>
-            <img src="img/Destaque Principal.png" alt="Imagem principal" width="520px" height="192px">
+            <img class="imagem-destaque" src="img/Destaque Principal.png" alt="Imagem principal" width="720px" height="250px">
         </section>
         
-        <section>
+        <section class="artigos">
             <article>
                 <img src="img/Imagem artigo 1.jpg" alt="Imagem do primeiro artigo">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nisi nobis, 
