--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section>
-            <img class="imagem-destaque" src="img/Destaque Principal.png" alt="Imagem principal" width="720px" height="250px">
+            <img class="imagem-destaque" src="img/Destaque Principal.png" alt="Imagem principal" width="800px" height="250px">
         </section>
         
         <section class="artigos">
@@ -40,20 +40,21 @@
                 </p>
             </article>
         </section>
+    </main>
+    <aside>
+        <div><img src="img/menu.png" alt="icone menu" width="25px" height="25px">
+        <p>Menu</p>
+        </div>
 
-        <aside>
-            <img src="img/menu.png" alt="icone do menu" width="23px" height="23px"> 
-            <p>Menu</p>
-            <ul>
-                <li><a href="#">Colaboradores</a></li>
-            </ul>
-        </aside>
+        <ul class="submenu">
+            <li><a href="#">Colaboradores</a></li>
+            <li><a href="#">Projetos</a></li>
+        </ul>
 
-        <footer>
+    </aside>
+          <footer>
             <p>&copy; 2025 Todos os direitos reservados</p>
         </footer>
-        
-    </main>
 </body>
 
 </html>
